--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+git_token
+build
+dist
+*.egg-info
+__pycache__
+.*
+!.gitignore
+*.ipynb
+*-hide
+*.hide
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
