--- a/web_server/Makefile
+++ b/web_server/Makefile
@@ -1,5 +1,6 @@
 FILES=data_server.py gui_server.py \
-	projects.html project.html base.html login.html handle.html
+	projects.html project.html base.html login.html handle.html \
+	rse.html rses.html
 
 build:	$(SERVER_DIR)
 	cp $(FILES)  $(SERVER_DIR)
