--- a/data_dispatcher/Makefile
+++ b/data_dispatcher/Makefile
@@ -4,7 +4,7 @@ FILES = api.py db.py __init__.py version.py logs.py
 
 build:	$(MODULE_DIR) $(UI_DIR)
 	cp $(FILES) $(MODULE_DIR)
-	cp ui/*.py $(UI_DIR)
+	cd ui; make UI_DIR=$(UI_DIR) build
 	
 $(MODULE_DIR):
 	mkdir -p $@
