--- a/data_dispatcher/ui/Makefile
+++ b/data_dispatcher/ui/Makefile
@@ -1,9 +1,11 @@
 BINFILES = dd
-LIBFILES = __init__.py ui.py ui_project.py ui_handle.py ui_lib.py ui_rse.py
+LIBFILES = __init__.py ui.py ui_project.py ui_file.py ui_lib.py ui_rse.py ui_worker.py 
 
 build:	$(UI_DIR)
 	cp $(BINFILES) $(LIBFILES) $(UI_DIR)
-	cd $(UI_DIR); chmod +x $(BINFILES)
+	mkdir $(UI_DIR)/cli
+	cp cli/*.py $(UI_DIR)/cli
+	cd $(UI_DIR); chmod -R +x $(BINFILES) cli
 
 $(UI_DIR):
 	mkdir -p $@
