--- a/data_dispatcher/Makefile
+++ b/data_dispatcher/Makefile
@@ -1,10 +1,11 @@
 UI_DIR=$(MODULE_DIR)/ui
 
-FILES = api.py db.py __init__.py version.py logs.py
+FILES = api.py db.py __init__.py version.py
 
 build:	$(MODULE_DIR) $(UI_DIR)
 	cp $(FILES) $(MODULE_DIR)
 	cd ui; make UI_DIR=$(UI_DIR) build
+	cp -R logs $(MODULE_DIR)
 	
 $(MODULE_DIR):
 	mkdir -p $@
