--- a/data_dispatcher/ui/Makefile
+++ b/data_dispatcher/ui/Makefile
@@ -1,11 +1,15 @@
-BINFILES = dd
+BINFILES = ddisp
 LIBFILES = ui_main.py ui_project.py ui_file.py ui_lib.py ui_rse.py ui_worker.py 
 
-build:	$(UI_DIR)
-	cp $(BINFILES) $(LIBFILES) $(UI_DIR)
-	mkdir $(UI_DIR)/cli
-	cp cli/*.py $(UI_DIR)/cli
-	cd $(UI_DIR); chmod -R +x $(BINFILES) cli
+build:	$(CLIENT_LIBDIR) $(CLIENT_BINDIR)
+	cp $(LIBFILES) $(CLIENT_LIBDIR)
+	mkdir $(CLIENT_LIBDIR)/cli
+	cp cli/*.py $(CLIENT_LIBDIR)/cli
+	cp $(BINFILES) $(CLIENT_BINDIR)
+	cd $(CLIENT_BINDIR); chmod +x $(BINFILES)
 
-$(UI_DIR):
+$(CLIENT_LIBDIR):
+	mkdir -p $@
+
+$(CLIENT_BINDIR):
 	mkdir -p $@
