--- a/web_server/Makefile
+++ b/web_server/Makefile
@@ -1,3 +1,5 @@
+SERVER_DIR=$(SERVER_ROOT)/server
+
 FILES=data_server.py gui_server.py \
 	projects.html project.html base.html login.html handle.html \
 	rse.html rses.html proximity_map.html
