Fixed ui modules placement in the client tarball

--- a/data_dispatcher/ui/Makefile
+++ b/data_dispatcher/ui/Makefile
@@ -1,14 +1,15 @@
 BINFILES = ddisp
+UI_LIBDIR = $(CLIENT_LIBDIR)/ui
 LIBFILES = ui_main.py ui_project.py ui_file.py ui_lib.py ui_rse.py ui_worker.py 
 
-build:	$(CLIENT_LIBDIR) $(CLIENT_BINDIR)
-	cp $(LIBFILES) $(CLIENT_LIBDIR)
-	mkdir $(CLIENT_LIBDIR)/cli
-	cp cli/*.py $(CLIENT_LIBDIR)/cli
+build:	$(UI_LIBDIR) $(CLIENT_BINDIR)
+	cp $(LIBFILES) $(UI_LIBDIR)
+	mkdir $(UI_LIBDIR)/cli
+	cp cli/*.py $(UI_LIBDIR)/cli
 	cp $(BINFILES) $(CLIENT_BINDIR)
 	cd $(CLIENT_BINDIR); chmod +x $(BINFILES)
 
-$(CLIENT_LIBDIR):
+$(UI_LIBDIR):
 	mkdir -p $@
 
 $(CLIENT_BINDIR):
