--- a/daemon/Makefile
+++ b/daemon/Makefile
@@ -1,4 +1,4 @@
-FILES=daemon.py daemon_web_server.py
+FILES=daemon.py daemon_web_server.py tape_interfaces.py dcache.py
 
 build:	$(DAEMON_DIR)
 	cp $(FILES)  $(DAEMON_DIR)
